hphp/hack/test/typecheck/reified_generics/consistent_construct_final.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

final class C<reify T> {
  public function f(): void {
    new static();
  }
}
